--- a/public/index.html
+++ b/public/index.html
@@ -37,5 +37,9 @@
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"
     ></script>
+    <script
+      src="https://kit.fontawesome.com/281e1dfa8c.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
